# ajtai

./: CHANGELOG.md  Cargo.toml  README.md  justfile  notes.md
.github/workflows/: check.yaml
src/: commitment.rs  comptime.rs  lib.rs  ring.rs
