[package]
authors     = ["Colin Roberts"]
description = "A no-std implementation of the Ajtai commitment scheme."
edition     = "2021"
keywords    = ["cryptography", "LWE", "lattices"]
license     = "MIT"
name        = "ajtai"
readme      = "README.md"
repository  = "https://github.com/autoparallel/ajtai"
version     = "0.1.0"

[dependencies]
ff = { version = "0.13", default-features = false, features = ["derive"] }

[dev-dependencies]
rstest = { version = "0.24", default-features = false }
