[package]
authors     = ["Colin Roberts"]
description = "A no-std implementation of the Ajtai commitment scheme."
edition     = "2021"
keywords    = ["cryptography", "LWE", "lattices"]
license     = "MIT"
name        = "ajtai"
readme      = "README.md"
repository  = "https://github.com/autoparallel/ajtai"
version     = "0.1.2"

[dependencies]
ff = { version = "0.13", default-features = false, features = ["derive"] }
rand_core = { version = "0.6", default-features = false, features = [
  "getrandom",
] }

[dev-dependencies]
rstest = { version = "0.24", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen      = { version = "0.2" }
wasm-bindgen-test = { version = "0.3" }
